# example_bazel_cpp

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md
.github/workflows/: ci.yml
src/: BUILD.bazel  Library.hpp  main.cpp
test/: BUILD.bazel  test_library.cpp
